Path prototype